{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 17,
  "lineage": "56600342-5631-8628-d392-86f7e9c901b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a91e64a124cd4e08",
            "domain": "vpc",
            "id": "eipalloc-0a91e64a124cd4e08",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-111-199.compute-1.amazonaws.com",
            "public_ip": "3.218.111.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377214961:internet-gateway/igw-02fcba051b3581945",
            "id": "igw-02fcba051b3581945",
            "owner_id": "891377214961",
            "tags": {
              "Name": "Armageddon_London_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "Armageddon_London_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0cab950731fdbca25"
          },
          "dependencies": [
            "aws_vpc.Armageddon_London"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Armageddon_London_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377214961:targetgroup/Armageddon-London-target-group/087a6bbe43a60ecf",
            "arn_suffix": "targetgroup/Armageddon-London-target-group/087a6bbe43a60ecf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377214961:targetgroup/Armageddon-London-target-group/087a6bbe43a60ecf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Armageddon-London-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Armageddon-LondonTargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "Armageddon_London"
            },
            "tags_all": {
              "Name": "Armageddon-LondonTargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "Armageddon_London"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0cab950731fdbca25"
          },
          "dependencies": [
            "aws_vpc.Armageddon_London"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0c90a4cb06f210247",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.57.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fcba051b3581945",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cab950731fdbca25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Armageddon_London"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Armageddon_London-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377214961:security-group/sg-01a527200ef06fde9",
            "description": "Armageddon_London-sg01-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "10.57.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a527200ef06fde9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.57.0.0/16"
                ],
                "description": "MyEvilBox",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.57.0.0/16"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.57.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Armageddon_London-sg01-servers",
            "name_prefix": "",
            "owner_id": "891377214961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Armageddon_London-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "Armageddon_London-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cab950731fdbca25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Armageddon_London"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Armageddon_London-sg02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377214961:security-group/sg-0132b11b1d77b4787",
            "description": "Armageddon_London-sg02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "10.57.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0132b11b1d77b4787",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.57.0.0/16"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Armageddon_London-sg02-LB01",
            "name_prefix": "",
            "owner_id": "891377214961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Armageddon_London-sg02-LB01",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "Armageddon_London-sg02-LB01",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cab950731fdbca25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Armageddon_London"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Armageddon_London",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377214961:vpc/vpc-0cab950731fdbca25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.57.0.0/16",
            "default_network_acl_id": "acl-073ef5e5511de4365",
            "default_route_table_id": "rtb-0748cffa0d40c35d7",
            "default_security_group_id": "sg-080e282f2d75558cd",
            "dhcp_options_id": "dopt-081c2fedc6bdd3336",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cab950731fdbca25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0748cffa0d40c35d7",
            "owner_id": "891377214961",
            "tags": {
              "Country": "Japan",
              "Name": "TheKingdom",
              "Owner": "Lemons",
              "Planet": "TheKingdom1",
              "Service": "setup1"
            },
            "tags_all": {
              "Country": "Japan",
              "Name": "TheKingdom",
              "Owner": "Lemons",
              "Planet": "TheKingdom1",
              "Service": "setup1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}